--- a/taskpane.html
+++ b/taskpane.html
@@ -17,50 +17,52 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            padding: 20px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: #333;
-            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
         }
 
         .container {
-            max-width: 600px;
-            margin: 0 auto;
+            width: 100%;
+            height: 100%;
             background: white;
-            border-radius: 12px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-            overflow: hidden;
+            display: flex;
+            flex-direction: column;
         }
 
         .header {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 25px;
+            padding: 15px;
             text-align: center;
+            flex-shrink: 0;
         }
 
         .header h1 {
-            font-size: 24px;
-            margin-bottom: 5px;
+            font-size: 20px;
+            margin-bottom: 4px;
         }
 
         .header p {
-            font-size: 14px;
+            font-size: 13px;
             opacity: 0.9;
         }
 
         .content {
-            padding: 25px;
+            padding: 15px;
+            overflow-y: auto;
+            flex: 1;
         }
 
         .section {
-            margin-bottom: 25px;
+            margin-bottom: 15px;
         }
 
         .section-title {
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 600;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
             color: #667eea;
             display: flex;
             align-items: center;
@@ -68,88 +70,83 @@
 
         .section-title::before {
             content: '▶';
-            margin-right: 8px;
-            font-size: 12px;
+            margin-right: 6px;
+            font-size: 10px;
         }
 
         .checkbox-group {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 6px;
         }
 
         .checkbox-item {
             display: flex;
             align-items: flex-start;
-            padding: 12px;
+            padding: 8px;
             background: #f8f9fa;
-            border-radius: 8px;
-            transition: all 0.3s ease;
+            border-radius: 6px;
+            transition: all 0.2s ease;
         }
 
         .checkbox-item:hover {
             background: #e9ecef;
-            transform: translateX(5px);
         }
 
         .checkbox-item input[type="checkbox"] {
-            margin-right: 12px;
+            margin-right: 10px;
             margin-top: 3px;
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-        }
-
-        .checkbox-label {
-            flex: 1;
         }
 
         .checkbox-label strong {
             display: block;
-            margin-bottom: 4px;
+            margin-bottom: 2px;
+            font-size: 13px;
             color: #333;
         }
 
         .checkbox-label small {
             color: #6c757d;
-            font-size: 12px;
+            font-size: 11px;
+            line-height: 1.2;
         }
 
         .radio-group {
             display: flex;
-            gap: 15px;
-            padding: 12px;
+            gap: 10px;
+            padding: 10px;
             background: #f8f9fa;
-            border-radius: 8px;
+            border-radius: 6px;
         }
 
         .radio-item {
             display: flex;
             align-items: center;
+            font-size: 13px;
         }
 
         .radio-item input[type="radio"] {
-            margin-right: 8px;
+            margin-right: 6px;
             cursor: pointer;
         }
 
         .button-group {
             display: flex;
-            gap: 10px;
-            margin-top: 25px;
+            gap: 8px;
+            margin-top: 20px;
+            margin-bottom: 10px;
         }
 
         button {
             flex: 1;
-            padding: 12px 20px;
+            padding: 10px;
             border: none;
-            border-radius: 8px;
-            font-size: 14px;
+            border-radius: 6px;
+            font-size: 13px;
             font-weight: 600;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
         }
 
         .btn-primary {
@@ -158,22 +155,13 @@
         }
 
         .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
-        }
-
-        .btn-secondary {
-            background: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background: #5a6268;
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
         }
 
         .btn-info {
             background: #17a2b8;
             color: white;
+            flex: 0.4;
         }
 
         .btn-info:hover {
@@ -181,11 +169,12 @@
         }
 
         .status {
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 20px;
+            padding: 10px;
+            border-radius: 6px;
+            margin-top: 15px;
             text-align: center;
             font-weight: 500;
+            font-size: 13px;
             display: none;
         }
 
@@ -210,6 +199,39 @@
             border: 1px solid #f5c6cb;
         }
 
+        .info-box {
+            background: #e7f3ff;
+            border-left: 3px solid #2196F3;
+            padding: 10px;
+            border-radius: 4px;
+            margin-bottom: 15px;
+            font-size: 12px;
+        }
+
+        .info-box strong {
+            display: block;
+            margin-bottom: 5px;
+            color: #1976D2;
+        }
+
+        .info-box ul {
+            margin-left: 15px;
+            color: #555;
+        }
+
+        /* Scrollbar styles */
+        .content::-webkit-scrollbar {
+            width: 6px;
+        }
+        .content::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .content::-webkit-scrollbar-thumb {
+            background: #ccc;
+            border-radius: 3px;
+        }
+
+        /* Modal improvements */
         .modal {
             display: none;
             position: fixed;
@@ -217,116 +239,41 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.5);
             z-index: 1000;
-            overflow: auto;
+            justify-content: center;
+            align-items: center;
         }
 
         .modal-content {
             background: white;
-            margin: 50px auto;
-            padding: 30px;
-            max-width: 700px;
-            border-radius: 12px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            width: 90%;
+            height: 90%;
+            max-width: 600px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+            display: flex;
+            flex-direction: column;
+            margin: 0;
         }
 
         .modal-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            padding-bottom: 15px;
-            border-bottom: 2px solid #667eea;
-        }
-
-        .modal-header h2 {
-            color: #667eea;
-            font-size: 22px;
-        }
-
-        .close-btn {
-            background: none;
-            border: none;
-            font-size: 28px;
-            color: #999;
-            cursor: pointer;
-            padding: 0;
-            width: auto;
-            line-height: 1;
-        }
-
-        .close-btn:hover {
-            color: #333;
+            margin-bottom: 15px;
+            padding-bottom: 10px;
         }
 
         .report-content {
-            background: #f8f9fa;
-            padding: 20px;
-            border-radius: 8px;
-            white-space: pre-wrap;
-            font-family: 'Courier New', monospace;
-            font-size: 13px;
-            max-height: 500px;
-            overflow-y: auto;
-            line-height: 1.6;
-        }
-
-        .info-box {
-            background: #e7f3ff;
-            border-left: 4px solid #2196F3;
+            flex: 1;
             padding: 15px;
-            border-radius: 4px;
-            margin-bottom: 20px;
+            border: 1px solid #eee;
+            font-size: 12px;
         }
-
-        .info-box strong {
-            display: block;
-            margin-bottom: 8px;
-            color: #1976D2;
-        }
-
-        .info-box ul {
-            margin-left: 20px;
-            color: #555;
-        }
-
-        .info-box li {
-            margin-bottom: 5px;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .container {
-            animation: fadeIn 0.5s ease;
-        }
-
-        /* Scrollbar customizada */
-        .report-content::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .report-content::-webkit-scrollbar-track {
-            background: #f1f1f1;
-            border-radius: 4px;
-        }
-
-        .report-content::-webkit-scrollbar-thumb {
-            background: #667eea;
-            border-radius: 4px;
-        }
-
-        .report-content::-webkit-scrollbar-thumb:hover {
-            background: #764ba2;
+        
+        .btn-secondary {
+            background: #6c757d;
+            color: white;
+            padding: 8px 16px;
         }
     </style>
 </head>
